[npxF4J8c] Fix text wrapping in submission view

--- a/app/assets/stylesheets/pages/_submission-single-page.scss
+++ b/app/assets/stylesheets/pages/_submission-single-page.scss
@@ -23,6 +23,8 @@
   margin: 0;
   text-align: right;
   border-bottom: 1px solid #ccc;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 
   &:nth-of-type(even) {
     background: #f0f0f0;
